--- a/header.html
+++ b/header.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="#">Getting Started</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Portfolio</a>
+                                <a class="nav-link" href="apps.php">Our Apps</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Rates</a>
